# demo_of_spillman_cashu_channel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CASHUTUBE.md  CLAUDE.md  Makefile  README.md  SPILMAN_CHANGELOG.md  SPILMAN_DEVELOPMENT.md
crates/cdk/: Cargo.toml
crates/cdk-common/src/: task.rs
crates/cdk-mintd/: README.md
crates/cdk-py/: Cargo.toml
crates/cdk-py/src/: lib.rs
crates/cdk-signatory/src/: common.rs  db_signatory.rs
crates/cdk-spilman-go/: Cargo.toml
crates/cdk-spilman-go/spilman/: bridge.go  gateway.c  go.mod
crates/cdk-spilman-go/src/: lib.rs
crates/cdk-spilman-python/: Cargo.toml  pyproject.toml
crates/cdk-spilman-python/src/: lib.rs
crates/cdk-wasm/: Cargo.toml
crates/cdk-wasm/src/: lib.rs
crates/cdk/examples/: spillman_channel.rs  spilman_channel.rs
crates/cdk/examples/spilman_channel/: README.md  balance_update.rs  deterministic.rs  established_channel.rs  extra.rs  fixtures.rs  keyset_info.rs  keysets_and_amounts.rs  main.rs  params.rs  sender_and_receiver.rs  test_helpers.rs
crates/cdk/src/: lib.rs
crates/cdk/src/mint/: builder.rs  mod.rs
crates/cdk/src/spilman/: balance_update.rs  bindings.rs  bridge.rs  deterministic.rs  established_channel.rs  keysets_and_amounts.rs  mod.rs  params.rs  sender_and_receiver.rs  (+1 more)
dev-mint/: config.dev.toml
examples/go-ascii-art/: .gitignore  go.mod  go.sum  main.go
examples/python-ascii-art/: README.md  client.py  requirements.txt  server.py
meetings/: 2025-11-05-agenda.md  2025-11-12-agenda.md  2025-11-19-agenda.md  2025-11-26-agenda.md  2025-12-03-agenda.md  2025-12-10-agenda.md  2025-12-24-agenda.md  2026-01-07-agenda.md  2026-01-14-agenda.md  2026-01-21-agenda.md  2026-01-28-agenda.md
scripts/: Dockerfile.test  docker-test.sh  go-parallel-demo.sh  python-parallel-demo.sh  run_temporary_mint.sh  run_with_mint.sh  wait_for_mint.sh
scripts/nutmix-setup-units/: .gitignore  go.mod  go.sum  main.go
web/: Makefile
web/media/: .gitignore
web/server/: Dockerfile  requirements.txt  server.py  server_key.json
web/server/static/: index.html
(+1 files in other folders)
