[package]
name = "cdk-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Cashu payment channels"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cdk = { workspace = true, default-features = false }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
