[package]
name = "cdk-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for Cashu payment channels"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cdk = { workspace = true, default-features = false }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
